harypotter has fixed